Fix header menu being covered by post image

--- a/src/Header.scss
+++ b/src/Header.scss
@@ -6,6 +6,7 @@
   top: 0;
   transition: top 0.3s;
   width: 100%;
+  z-index: 1000;
 
   &-hide {
     top: -64px;
